# webgen

./: install  mkdocs.yml  pyproject.toml
test/: config.yaml
test/site/: index.md
tests/: test_webgen.py
webgen/: _build.py  _configparser.py  _markdownparser.py  cli.py
