[tool.poetry]
name = "webgen"
version = "0.1.0"
description = ""
authors = ["DrgnFireYellow <86269995+DrgnFireYellow@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
